[project]
name = "ramose"
version = "2.0.0"
description = "Restful API Manager Over SPARQL Endpoints (RAMOSE) is an application that allows agile development and publication of documented RESTful APIs for querying SPARQL endpoints, according to a particular specification document."
authors = [
    { name = "Silvio Peroni", email = "silvio.peroni@unibo.it" },
    { name = "marilena", email = "marilena.daquino2@unibo.it" },
    { name = "Davide Brembilla" },
    { name = "Ivan Heibi", email = "ivan.heibi2@unibo.it" },
    { name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it" },
]
license = { text = "ISC" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask>=3.1.3",
    "markdown>=3.10.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]

[project.optional-dependencies]
sparql-anything = ["pysparql-anything>=1.0.0.0"]

[project.urls]
Repository = "https://github.com/opencitations/ramose/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["ramose"]
omit = ["ramose/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.pyright]
extraPaths = ["test/data"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle, project doesn't use docstrings
    "DOC",    # pydoclint, same
    "ANN",    # flake8-annotations, pyright handles this
    "CPY",    # flake8-copyright, REUSE handles compliance
    "COM812", # conflicts with Ruff formatter
    "ISC001", # conflicts with Ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"test/**" = [
    "S101",    # assert
    "ARG",     # unused fixture args (callback signatures)
    "SLF001",  # private member access
    "INP001",  # implicit namespace package
    "S603",    # subprocess in fixtures
    "S607",    # partial executable path
    "PLR2004", # magic values in assertions
]
"ramose/__main__.py" = [
    "T20",     # print in CLI
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-args = 7

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "genbadge[coverage]>=1.1.3",
    "jsonschema>=4.26.0",
    "jupyter-book~=1.0.0",
    "pyright>=1.1.408",
    "pyshacl>=0.31.0",
    "pytest>=9.0.2",
    "rdflib>=7.6.0",
    "reuse>=6.2.0",
    "ruff>=0.15.9",
    "watchdog[watchmedo]>=6.0.0",
]
